rename concept 'contact' to 'userRelationship'
