# back/start/routes/userRelationshipRoutes.ts
@@ -1,5 +1,5 @@
 import Route from '@ioc:Adonis/Core/Route'
 
 Route.group(() => {
-    Route.resource('contacts', 'ContactsController').apiOnly().except(['update'])
+    Route.resource('user-relationships', 'UserRelationshipsController').apiOnly().except(['update'])
 }).prefix('api/users/:userId').middleware(['auth'])
